# RT1170

./: .clang-format  .gitignore  Makefile  readme.md  script.jlink
armgcc/: CMakeLists.txt  CMakePresets.json  MIMXRT1176xxxxx_cm7_ram.ld  append_type.py  config.cmake  flags.cmake  flags_common.cmake
src/: FreeRTOSConfig.h  board.c  board.h  lwipopts.h  main.c  pin_mux.h  play.py  usb_host_config.h
src/audio/: AudioCodec.c  AudioCodec.h  AudioSAI.c  AudioSAI.h  MicTestScript.py  TI3254.h  audio.c  audio.h
src/controllers/: FlipController.cpp  FlipController.cpp_bak-sim-attemp  FlipController.h
src/drivers/: DRV8873.cpp  DRV8873.h  VNHD7012.cpp  VNHD7012.h
src/encoders/: encoderRLS.cpp  encoderRLS.h  encoders.c  encoders.h
src/flash/: ExternalFlashMap.h  flash.c  flash.h  flash_config.c  flash_firmware.c
src/flexpwm/: flexpwm.c  flexpwm.h
src/flexspi/: flexspi.c  flexspi.h  flexspi_config.c  flexspi_nor_flash_ops.c  flexspi_nor_flash_ops.h
src/host_sim/: Makefile  build_sim.sh  desktop_flip_sim.cpp  flip_autostart.cpp  flip_test_task.cpp  imu.h  mock_all.h  sim  sim.cpp
src/host_sim/.gen/redirects/: task.h
src/imu/: imu.c  imu.h  imu_lpuart.c  imu_lpuart.h
src/interfaces/: IDriver.h  IEncoder.h  IMotor.h
src/lights/: lights.c  lights.h
src/logger/: logger.c  logger.h
src/lpadc/: lpadc.c  lpadc.h
src/motors/: AlonDriveMotor.cpp  AlonDriveMotor.h  RSBL8512.cpp  RSBL8512.h  RoboClaw.cpp  RoboClaw.h  TvaiDriveMotor.cpp  TvaiDriveMotor.h  motors.cpp  motors.h
src/network/: enet_100m.c  enet_100m.h  enet_1g.c  enet_1g.h  fsl_phymxl8611.c  fsl_phymxl8611.h  network.c  network.h  network_entity.c  network_entity.h  network_message.c  network_message.h  network_sockets.c  network_sockets.h
src/platform/: platform.c  platform.h
src/protocol/: protocol.c  protocol.h  protocol_api.h  protocol_error.h  protocol_gcs.h  protocol_handlers.c  protocol_telemetry.h
src/serial/: serial_lpuart_232.c  serial_lpuart_232.h  serial_lpuart_485.c  serial_lpuart_485.h
src/stservo/: INST.h  SCS.cpp  SCS.h  SCSerial.cpp  SCSerial.h  SMS_STS.cpp  SMS_STS.h
src/test/: CMakeLists.txt  desktop_flip_sim.cpp  flip_autostart.cpp  flip_test_task.cpp
src/test/mock/: FreeRTOS.h  task.h
src/test/mock/imu/: imu.h
src/test/mock/motors/: RSBL8512.h  motors.h
src/tests/: test_checksum.c  test_lights.c  test_motors.c  tests.h
src/usb/: host_video.c  host_video.h  usb_hub.c  usb_hub.h
